<resources>
    <string name="app_name">MultiQuiz</string>
    <string name="email_address">Địa chỉ Email</string>
    <string name="password">Mật khẩu</string>
    <string name="app_description">Ứng dụng giải đố trực tuyến</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên người dùng</string>
    <string name="register">Đăng ký</string>
    <string name="register_switch">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="login_switch">Đã có tài khoản? Đăng nhập tại đây</string>
    <string name="main_page">Trang chủ</string>
    <string name="user_page">Tài khoản</string>
    <string name="name_demo">Trương Anh Khoa</string>
    <string name="joindate_demo">Đã tham gia từ: 12/06/2023</string>
    <string name="picktheme_title">Chọn chủ đề</string>
    <string name="logout">Đăng xuất</string>
    <string name="theme_name">Theme name</string>
    <string name="demoid">DemoID</string>
    <string name="player1_text">Người chơi 1</string>
    <string name="example_question">Đây là quốc kì của quốc gia nào?</string>
    <string name="answer">Answer</string>
    <string name="status_waiting">Đang chờ sẵn sàng</string>
    <string name="ready">Sẵn sàng</string>
    <string name="quiz">Giải đố</string>
    <string name="online">trực tuyến</string>
    <string name="splashscreen_description">Tham gia hoặc tạo câu hỏi giải đố trực tuyến</string>
    <string name="textsplashscreen">Giải đố \ntrực tuyến</string>
    <string name="leaderboard">Bảng xếp hạng</string>
    <string name="edit_info_title">Chỉnh sửa thông tin</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="username_label">Tên người dùng</string>
    <string name="save_label">Lưu thông tin</string>
    <string name="userinfo_label">Thông tin người dùng</string>
    <string name="create_new_room_label">Tạo phòng chơi mới</string>
    <string name="demo_roomname">Phòng của Trương Anh Khoa</string>
    <string name="player2_text">Người chơi 2</string>
    <string name="win">CHIẾN THẮNG</string>
    <string name="resulttitle_demo">BẠN THUA</string>
    <string name="example_roomname">Phòng của Trương Anh Khoa</string>
    <string name="edit_label">Sửa</string>
    <string name="roomname_label">Tên phòng</string>
    <string name="cancel">Huỷ</string>
    <string name="confirm">Xác nhận</string>
    <string name="numberofquestion_label">Số câu hỏi</string>
    <string name="create_question">Tạo bộ câu hỏi</string>
    <string name="enter_code">Nhập mã tham gia</string>
    <string name="save">Lưu</string>
    <string name="general_info_create_match">Thông tin chung</string>
    <string name="title">Tiêu đề</string>
    <string name="description">Mô tả</string>
    <string name="question_label">Câu hỏi</string>
    <string name="add_question">Thêm câu hỏi</string>
    <string name="done">Xong</string>
    <string name="time_of_question">Thời gian của câu hỏi</string>
    <string name="add_answer">Thêm đáp án</string>
    <string name="demo_questionset_name">Bộ câu hỏi về lịch sử</string>
    <string name="demo_questionset_collection">Câu hỏi vè lịch sử</string>
    <string name="join_list">Danh sách tham gia</string>
    <string name="start">Bắt đầu</string>
    <string name="close">Đóng</string>
    <string name="join_code">Mã tham gia</string>
    <string name="question_Demo">Chiến thắng Điện biên phủ có ý nghĩa gì?</string>
    <string name="forget_password">Quên mật khẩu</string>
</resources>