<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GroupQuestionCreate">

    <LinearLayout
        android:id="@+id/ActionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/ButtonCancelCreateQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/ActionButton"
            android:gravity="start"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/CreateQuestionSetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tạo bộ câu hỏi"
            style="@style/ActionButton"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/ButtonSaveQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/ActionButton"
            android:gravity="end"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/GeneralInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ActionLayout"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="20dp">
        <TextView
            style="@style/PartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_info_create_match" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/QuestionTitleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/QuestionPartText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GeneralInfoLayout"
        android:padding="20dp">

        <TextView
            style="@style/PartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/QuestionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/QuestionPartText">
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/CreateQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_question"
        app:icon="@drawable/ic_add"/>


</RelativeLayout>