<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/ThemeLobbyTopAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/edit_info_title"
                app:navigationIcon="@drawable/ic_backarrow">

            </com.google.android.material.appbar.MaterialToolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AppBarLayout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/AvatarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/PartText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avatar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/UserAvatarProfileEdit"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/img_useravatar"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="10dp">
                            <Button
                                android:id="@+id/ChangeProfilePictureButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Thay đổi ảnh đại diện"/>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/AvatarLayout"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">
                    <TextView
                        style="@style/PartText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userinfo_label" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_label"
                        app:startIconDrawable="@drawable/ic_user"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/UsernameTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>



    </RelativeLayout>


    <Button
        android:id="@+id/SaveAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/save_label"
        android:textSize="18sp"/>

</RelativeLayout>