<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GroupLobbyOwnerControl">

    <LinearLayout
        android:id="@+id/QuestionAndJoinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/owner_background_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/GroupQuestionSetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bộ câu hỏi về lịch sử"
            android:textColor="@android:color/white"
            android:padding="8dp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mã tham gia: "
                android:textColor="@android:color/white"
                style="@style/MenuText"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/JoinCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="309908"
                android:textColor="@android:color/white"
                style="@style/MenuText"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/GeneralInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/QuestionAndJoinCode"
        android:orientation="vertical"
        android:padding="20dp">
    <TextView
        style="@style/PartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/JoinerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/QuestionPartText"
            android:layout_marginTop="20dp">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/CloseGroupLobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:text="@string/close"
        app:icon="@drawable/ic_close"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/StartGroupLobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:icon="@drawable/ic_start"/>

</RelativeLayout>